--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,6 @@
 <resources>
     <string name="app_name">Carrot_AOS</string>
-    <!-- TODO: Remove or change this placeholder text -->
+    <!--    chat 뷰-->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="item_chat_announcement_title">안내</string>
-    <string name="item_chat_announcement_content1">마포아씨님과 거래 예약을 했어요. 당근페이에</string>
-    <string name="item_chat_announcement_content2">가입하면 간편하게 송금할 수 있어요.</string>
 </resources>
