--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Carrot_AOS</string>
-    <!--    chat 뷰-->
+    <!--    chat 뷰    -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="item_chat_announcement_title">안내</string>
-    <string name="item_chat_announcement_detail"><u>자세히 보기</u></string>
+    <string name="chat_price_suggestion_available">(가격제안가능)</string>
+    <string name="chat_price_suggestion_unavailable">(가격제안불가)</string>
 </resources>
