--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,10 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="chat_price_suggestion_available">(가격제안가능)</string>
     <string name="chat_price_suggestion_unavailable">(가격제안불가)</string>
+    <!--    bottom navigation menu    -->
+    <string name="menu_home">홈</string>
+    <string name="menu_town">동네생활</string>
+    <string name="menu_nearby">내 근처</string>
+    <string name="menu_chat">채팅</string>
+    <string name="menu_my_info">나의 당근</string>
 </resources>
