#5 [feat] 바텀내비 기능 구현

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,10 @@
     <string name="menu_nearby">내 근처</string>
     <string name="menu_chat">채팅</string>
     <string name="menu_my_info">나의 당근</string>
+    <!--    dummy text    -->
+    <string name="dummy_town">이건 동네생활 뷰</string>
+    <string name="dummy_nearby">이건 내 근처 뷰</string>
+    <string name="dummy_chat">이건 채팅 뷰</string>
+    <string name="dummy_my_info">이건 나의 당근 뷰</string>
+
 </resources>
