--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="chat_price_suggestion_available">(가격제안가능)</string>
     <string name="chat_price_suggestion_unavailable">(가격제안불가)</string>
+    <!--    review 뷰    -->
+    <string name="item_review_button_my_manner">내 매너 평가 보기</string>
 </resources>
