--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="item_chat_announcement_title">안내</string>
     <string name="item_chat_announcement_detail"><u>자세히 보기</u></string>
+
+    <string name="item_like_and_view">관심%s·조회%s</string>
 </resources>
