{#4} [feat] sale view 서버통신

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,6 @@
     <string name="item_review_button_my_manner">내 매너 평가 보기</string>
     <string name="item_chat_announcement_title">안내</string>
     <string name="item_chat_announcement_detail"><u>자세히 보기</u></string>
+
+    <string name="item_like_and_view">관심%s·조회%s</string>
 </resources>
